# sot-dynamic-pinocchio

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  NEWS  README.md  fix-sot-dynamics.patch  package.xml  sot-dynamic.pc.cmake  todo.txt
.travis/: build
custom_cmake/: python.cmake
debian/: changelog  control  copyright  libsot-core-doc.install  libsot-dynamic-doc.doc-base  rules
doc/: CMakeLists.txt  Doxyfile.extra.in  Makefile  cmake_install.cmake  footer.html  header.html  package.dox  package.dox.cmake
doc/additionalDoc/: package.hh
doc/pictures/: footer.txt
doc/sphinx/: index.rst.in
include/: CMakeLists.txt
include/sot-dynamic/: angle-estimator.h  dynamic-hrp2.h  dynamic-hrp2_10.h  dynamic-hrp2_10_old.h  dynamic.h  dynamic.h.autosave  force-compensation.h  integrator-force-exact.h  integrator-force-rk4.h  integrator-force.h  mass-apparent.h  matrix-inertia.h  waist-attitude-from-sensor.h  zmpreffromcom.h
include/sot-dynamic-pinocchio/: CMakeLists.txt  angle-estimator.h  dynamic-pinocchio.h  dynamic.h  dynamic.h.old.h  force-compensation.h  integrator-force-exact.h  integrator-force-rk4.h  integrator-force.h  mass-apparent.h  matrix-inertia.h  pinocchio-device.hh  sot-pinocchio-controller.hh  state-integrator.h  waist-attitude-from-sensor.h  zmpreffromcom.h
include/sot/dynamic-pinocchio/: angle-estimator.h  dynamic-pinocchio.h  force-compensation.h  integrator-force-exact.h  integrator-force-rk4.h  integrator-force.h  mass-apparent.h  matrix-inertia.h  state-integrator.h  waist-attitude-from-sensor.h  zmpreffromcom.h
python/: CMakeLists.txt  kine_romeo.py  kine_romeo_small.py
python/dynamic_graph/sot/dynamic_pinocchio/: kine_romeo_small.py
scripts/python/: simusmall.py
src/: CMakeLists.txt  angle-estimator-command.h  angle-estimator-python.hh  angle-estimator.cpp  dynamic-command.h  dynamic-command.h.old  dynamic-hrp2.cpp  dynamic-hrp2_10.cpp  dynamic-hrp2_10_old.cpp  dynamic-python-module-py.cc  dynamic.cpp  force-compensation.cpp  integrator-force-exact-python.hh  integrator-force-exact.cpp  integrator-force-python.hh  integrator-force-rk4-python.hh  integrator-force-rk4.cpp  integrator-force.cpp  mass-apparent-python.hh  mass-apparent.cpp  matrix-inertia.cpp  pinocchio-device.cpp  python-module-py.cpp  sot-dynamic-pinocchio.cpp  sot-dynamic.cpp  sot-dynamic.cpp.old  sot-pinocchio-controller.cpp  sot-pinocchio-controller.hh  state-integrator.cpp  waist-attitude-from-sensor-python.hh  waist-attitude-from-sensor.cpp  zmp-from-forces-python.hh  zmp-from-forces.cpp  zmp-from-forces.h  zmpreffromcom-python.hh  zmpreffromcom.cpp
src/dynamic_graph/sot/dynamic_pinocchio/: __init__.py  humanoid_robot.py  kine_romeo.py  kine_romeo_small.py  parser.py  robot.py  tools.py
src/dynamic_graph/sot/dynamics/: __init__.py  hrp2.py  hrp2.py.in  humanoid_robot.py  parser.py  solver.py  tools.py
src/dynamic_graph/sot/dynamics_pinocchio/: __init__.py  humanoid_robot.py  parser.py  tools.py
tests/: CMakeLists.txt  dummy.cpp  kineromeo.py  kinetalos.py  sot_controller.yaml  sot_params.yaml  test_constructor.cpp  test_djj.cpp  test_dyn.cpp  test_results.cpp  test_state_integrator.cpp
tests/python/: CMakeLists.txt  feet_follower.py  humanoid_robot.py  r2d2.urdf  reach_both_hands.py  reach_left_hand.py  reach_right_hand.py
unitTesting/: CMakeLists.txt  dev_test.cpp  dev_test_all_compute.cpp  dev_test_command.cpp  dev_test_jacobian.cpp  dev_test_sign.cpp  dummy.cpp  kineromeo.py  kinetalos.py  test_config.cpp  test_constructor.cpp  test_djj.cpp  test_dyn.cpp  test_pinocchio_device.cpp  test_results.cpp  test_sot_pinocchio_controller.cpp  test_state_integrator.cpp  two_link.urdf
unitTesting/python/: dynamic_walk.py  feet_follower.py  hrp2.py  humanoid_robot.py  quasistatic_walking.py  reach_both_hands.py  reach_left_hand.py  reach_right_hand.py  test_dyndrift.py  tools.py  unittest
