<?xml version="1.0"?>
<package format="3">
  <name>sot-dynamic-pinocchio</name>
  <version>3.6.5</version>
  <description>
    Pinocchio bindings for dynamic-graph
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>

  <license>BSD</license>

  <url type="website">http://stack-of-tasks.github.io</url>
  <url type="repository">http://www.github.com/stack-of-tasks/sot-dynamic-pinocchio</url>
  <url type="bugtracker">http://www.github.com/stack-of-tasks/sot-dynamic-pinocchio/issues</url>
  <author>Olivier Stasse</author>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend>sot-core</depend>
  <depend>sot-tools</depend>
  <depend>pinocchio</depend>
  <depend>dynamic-graph-python</depend>
  <depend>liblapack-dev</depend>
  <depend>libopenblas-dev</depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>dynamic-graph</doc_depend>

  <test_depend>gtest</test_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
